# noslop

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
artifacts/: encoder_state.json  human_coding_targets.json  taxonomy.json  unit_214.md
artifacts/models/: binary_full.json  binary_narrative.json  noslop_binary_narrative.json  noslop_binary_narrative.meta.json
config/: models.yaml
docs/data/: grok_pilot_results.csv
evals/: build_modes_docx.js  plot_compare.py  prompts.json  run_ab.md  run_modes_compare.py  run_score_ab.py  run_voice_ab.py
evals/results/: HUMAN_BASELINE.md  SUMMARY.md  SUMMARY_V2.md  _anti_default_pack.json  _optimal_noslop_pack.json  agent_answer_default.md  agent_answer_default_cites.md  agent_answer_default_features.json  agent_answer_default_score.json  agent_answer_noslop.md  agent_answer_noslop_cites.md  agent_answer_noslop_features.json  agent_answer_noslop_score.json  cold_email_default.md  cold_email_default_cites.md  cold_email_default_features.json  cold_email_default_score.json  cold_email_noslop.md  cold_email_noslop_cites.md  cold_email_noslop_features.json  cold_email_noslop_score.json  mall_shoe_default.md  mall_shoe_default_cites.md  mall_shoe_default_features.json  mall_shoe_default_score.json  mall_shoe_noslop.md  mall_shoe_noslop_cites.md  mall_shoe_noslop_features.json  mall_shoe_noslop_score.json  noslop_modes_comparison.docx  personal_bio_default.md  personal_bio_default_cites.md  personal_bio_default_features.json  personal_bio_default_score.json  personal_bio_noslop.md  (+11 more)
scripts/: _probe_width.py  score_grok_pilot.py
tests/: test_encode_width.py  test_eval_honesty.py  test_score_coverage.py  test_skill_construction.py  test_skill_realign.py  test_voice.py
(+115 files in other folders)
