[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noslop"
version = "0.1.0"
description = "Agent skill for prose that doesn’t read like template AI, plus local VOICE and StoryScope CLIs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "xgboost>=2.0",
]

[project.optional-dependencies]
encoder = ["pyarrow>=14.0"]

[project.scripts]
noslop = "noslop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
